--- a/client/src/components/Result/result.css
+++ b/client/src/components/Result/result.css
@@ -1,7 +1,9 @@
 .result1 {
-  width: 690px;
-  background-color: gray;
-  border-radius: 5%;
-  padding: 0% 10%;
-  margin: 0 auto;
+  /* width: 690px; */
 }
+.chart{
+  display: flex;
+  flex-direction: row;
+  padding: 0% 0%;
+}
+
